--- a/pet-clinic-web/src/main/resources/templates/owners/index.html
+++ b/pet-clinic-web/src/main/resources/templates/owners/index.html
@@ -5,7 +5,9 @@
         <title>List of Pet Owners</title>
     </head>
     <body>
-        <h1 th:text="'List of Owners'">List of Owners</h1>
+    <!--/*@thymesVar id="owner" type="guru.springframework.sfgpetclinic.model.Owner"*/-->
+
+    <h1 th:text="'List of Owners'">List of Owners</h1>
         <table>
             <thead>
                 <tr>
