--- a/pet-clinic-web/src/main/resources/templates/pets/createOrUpdateVisitForm.html
+++ b/pet-clinic-web/src/main/resources/templates/pets/createOrUpdateVisitForm.html
@@ -20,9 +20,11 @@
     </thead>
     <tr>
         <td th:text="${pet.name}" /></td>
-        <td th:text="${#temporals.format(pet.birthDate, 'yyyy-MM-dd')}" /></td>
+        <td
+                th:text="${#temporals.format(pet.birthDate, 'yyyy-MM-dd')}" /></td>
         <td th:text="${pet.petType}" /></td>
-        <td th:text="${pet.owner?.firstName + ' ' + pet.owner?.lastName}" /></td>
+        <td
+                th:text="${pet.owner?.firstName + ' ' + pet.owner?.lastName}" /></td>
     </tr>
 </table>
 
