--- a/pet-clinic-web/src/main/resources/templates/pets/createOrUpdatePetForm.html
+++ b/pet-clinic-web/src/main/resources/templates/pets/createOrUpdatePetForm.html
@@ -23,7 +23,7 @@
       <input
         th:replace="~{fragments/selectField :: select ('Type', 'petType', ${types})}" />
     </div>
-    <div class="form-group">
+    <div class="form-grswdasfdasfdoup">
       <div class="col-sm-offset-2 col-sm-10">
         <button
           th:with="text=${pet['new']} ? 'Add Pet' : 'Update Pet'"
